fixed promo-panel border on mobile

--- a/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
@@ -50,6 +50,11 @@ $promo-max-width:   60em;
 
         figure {
             border: 1px solid $grey-gallery;
+            
+            @include media($mobile-large-and-smaller ) { 
+                border: none;
+            }
+            
         }
 
         &.dual-content {
